src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LSHIFT
    RSHIFT

Grammar

Rule 0     S' -> program
Rule 1     program -> compound_statement
Rule 2     compound_statement -> { stmt_list }
Rule 3     stmt_list -> stmt_list statement
Rule 4     stmt_list -> <empty>
Rule 5     statement -> expression ;
Rule 6     statement -> compound_statement
Rule 7     statement -> IF ( expression ) statement
Rule 8     statement -> IF ( expression ) statement ELSE statement
Rule 9     statement -> WHILE ( expression ) statement
Rule 10    statement -> DO statement WHILE ( expression ) ;
Rule 11    statement -> FOR ( opt_expr ; opt_expr ; opt_expr ) statement
Rule 12    opt_expr -> expression
Rule 13    opt_expr -> <empty>
Rule 14    statement -> PRINT ( print_args ) ;
Rule 15    print_args -> STRING , expression
Rule 16    print_args -> STRING
Rule 17    statement -> SCAN ( ID ) ;
Rule 18    assign_op -> =
Rule 19    assign_op -> PLUSEQ
Rule 20    assign_op -> MINUSEQ
Rule 21    assign_op -> TIMESEQ
Rule 22    assign_op -> DIVEQ
Rule 23    assign_op -> MODEQ
Rule 24    assign_op -> LSHIFTEQ
Rule 25    assign_op -> RSHIFTEQ
Rule 26    assign_op -> ANDEQ
Rule 27    assign_op -> XOREQ
Rule 28    assign_op -> OREQ
Rule 29    expression -> ID assign_op expression
Rule 30    expression -> expression + expression
Rule 31    expression -> expression - expression
Rule 32    expression -> expression * expression
Rule 33    expression -> expression / expression
Rule 34    expression -> expression % expression
Rule 35    expression -> expression < expression
Rule 36    expression -> expression > expression
Rule 37    expression -> expression LE expression
Rule 38    expression -> expression GE expression
Rule 39    expression -> expression EQ expression
Rule 40    expression -> expression NE expression
Rule 41    expression -> expression AND expression
Rule 42    expression -> expression OR expression
Rule 43    expression -> + expression
Rule 44    expression -> - expression
Rule 45    expression -> ~ expression
Rule 46    expression -> ! expression
Rule 47    expression -> expression | expression
Rule 48    expression -> expression ^ expression
Rule 49    expression -> expression & expression
Rule 50    expression -> PLUSPLUS ID
Rule 51    expression -> MINUSMINUS ID
Rule 52    expression -> ( expression )
Rule 53    expression -> NUMBER
Rule 54    expression -> STRING
Rule 55    expression -> ID

Terminals, with rules where they appear

!                    : 46
%                    : 34
&                    : 49
(                    : 7 8 9 10 11 14 17 52
)                    : 7 8 9 10 11 14 17 52
*                    : 32
+                    : 30 43
,                    : 15
-                    : 31 44
/                    : 33
;                    : 5 10 11 11 14 17
<                    : 35
=                    : 18
>                    : 36
AND                  : 41
ANDEQ                : 26
DIVEQ                : 22
DO                   : 10
ELSE                 : 8
EQ                   : 39
FOR                  : 11
GE                   : 38
ID                   : 17 29 50 51 55
IF                   : 7 8
LE                   : 37
LSHIFT               : 
LSHIFTEQ             : 24
MINUSEQ              : 20
MINUSMINUS           : 51
MODEQ                : 23
NE                   : 40
NUMBER               : 53
OR                   : 42
OREQ                 : 28
PLUSEQ               : 19
PLUSPLUS             : 50
PRINT                : 14
RSHIFT               : 
RSHIFTEQ             : 25
SCAN                 : 17
STRING               : 15 16 54
TIMESEQ              : 21
WHILE                : 9 10
XOREQ                : 27
^                    : 48
error                : 
{                    : 2
|                    : 47
}                    : 2
~                    : 45

Nonterminals, with rules where they appear

assign_op            : 29
compound_statement   : 1 6
expression           : 5 7 8 9 10 12 15 29 30 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 44 45 46 47 47 48 48 49 49 52
opt_expr             : 11 11 11
print_args           : 14
program              : 0
statement            : 3 7 8 8 9 10 11
stmt_list            : 2 3

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . compound_statement
    (2) compound_statement -> . { stmt_list }

    {               shift and go to state 3

    program                        shift and go to state 1
    compound_statement             shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> compound_statement .

    $end            reduce using rule 1 (program -> compound_statement .)


state 3

    (2) compound_statement -> { . stmt_list }
    (3) stmt_list -> . stmt_list statement
    (4) stmt_list -> .

    }               reduce using rule 4 (stmt_list -> .)
    IF              reduce using rule 4 (stmt_list -> .)
    WHILE           reduce using rule 4 (stmt_list -> .)
    DO              reduce using rule 4 (stmt_list -> .)
    FOR             reduce using rule 4 (stmt_list -> .)
    PRINT           reduce using rule 4 (stmt_list -> .)
    SCAN            reduce using rule 4 (stmt_list -> .)
    ID              reduce using rule 4 (stmt_list -> .)
    +               reduce using rule 4 (stmt_list -> .)
    -               reduce using rule 4 (stmt_list -> .)
    ~               reduce using rule 4 (stmt_list -> .)
    !               reduce using rule 4 (stmt_list -> .)
    PLUSPLUS        reduce using rule 4 (stmt_list -> .)
    MINUSMINUS      reduce using rule 4 (stmt_list -> .)
    (               reduce using rule 4 (stmt_list -> .)
    NUMBER          reduce using rule 4 (stmt_list -> .)
    STRING          reduce using rule 4 (stmt_list -> .)
    {               reduce using rule 4 (stmt_list -> .)

    stmt_list                      shift and go to state 4

state 4

    (2) compound_statement -> { stmt_list . }
    (3) stmt_list -> stmt_list . statement
    (5) statement -> . expression ;
    (6) statement -> . compound_statement
    (7) statement -> . IF ( expression ) statement
    (8) statement -> . IF ( expression ) statement ELSE statement
    (9) statement -> . WHILE ( expression ) statement
    (10) statement -> . DO statement WHILE ( expression ) ;
    (11) statement -> . FOR ( opt_expr ; opt_expr ; opt_expr ) statement
    (14) statement -> . PRINT ( print_args ) ;
    (17) statement -> . SCAN ( ID ) ;
    (29) expression -> . ID assign_op expression
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression % expression
    (35) expression -> . expression < expression
    (36) expression -> . expression > expression
    (37) expression -> . expression LE expression
    (38) expression -> . expression GE expression
    (39) expression -> . expression EQ expression
    (40) expression -> . expression NE expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . + expression
    (44) expression -> . - expression
    (45) expression -> . ~ expression
    (46) expression -> . ! expression
    (47) expression -> . expression | expression
    (48) expression -> . expression ^ expression
    (49) expression -> . expression & expression
    (50) expression -> . PLUSPLUS ID
    (51) expression -> . MINUSMINUS ID
    (52) expression -> . ( expression )
    (53) expression -> . NUMBER
    (54) expression -> . STRING
    (55) expression -> . ID
    (2) compound_statement -> . { stmt_list }

    }               shift and go to state 5
    IF              shift and go to state 9
    WHILE           shift and go to state 11
    DO              shift and go to state 12
    FOR             shift and go to state 13
    PRINT           shift and go to state 14
    SCAN            shift and go to state 15
    ID              shift and go to state 16
    +               shift and go to state 17
    -               shift and go to state 18
    ~               shift and go to state 19
    !               shift and go to state 20
    PLUSPLUS        shift and go to state 21
    MINUSMINUS      shift and go to state 22
    (               shift and go to state 10
    NUMBER          shift and go to state 23
    STRING          shift and go to state 24
    {               shift and go to state 3

    statement                      shift and go to state 6
    expression                     shift and go to state 7
    compound_statement             shift and go to state 8

state 5

    (2) compound_statement -> { stmt_list } .

    $end            reduce using rule 2 (compound_statement -> { stmt_list } .)
    }               reduce using rule 2 (compound_statement -> { stmt_list } .)
    IF              reduce using rule 2 (compound_statement -> { stmt_list } .)
    WHILE           reduce using rule 2 (compound_statement -> { stmt_list } .)
    DO              reduce using rule 2 (compound_statement -> { stmt_list } .)
    FOR             reduce using rule 2 (compound_statement -> { stmt_list } .)
    PRINT           reduce using rule 2 (compound_statement -> { stmt_list } .)
    SCAN            reduce using rule 2 (compound_statement -> { stmt_list } .)
    ID              reduce using rule 2 (compound_statement -> { stmt_list } .)
    +               reduce using rule 2 (compound_statement -> { stmt_list } .)
    -               reduce using rule 2 (compound_statement -> { stmt_list } .)
    ~               reduce using rule 2 (compound_statement -> { stmt_list } .)
    !               reduce using rule 2 (compound_statement -> { stmt_list } .)
    PLUSPLUS        reduce using rule 2 (compound_statement -> { stmt_list } .)
    MINUSMINUS      reduce using rule 2 (compound_statement -> { stmt_list } .)
    (               reduce using rule 2 (compound_statement -> { stmt_list } .)
    NUMBER          reduce using rule 2 (compound_statement -> { stmt_list } .)
    STRING          reduce using rule 2 (compound_statement -> { stmt_list } .)
    {               reduce using rule 2 (compound_statement -> { stmt_list } .)
    ELSE            reduce using rule 2 (compound_statement -> { stmt_list } .)


state 6

    (3) stmt_list -> stmt_list statement .

    }               reduce using rule 3 (stmt_list -> stmt_list statement .)
    IF              reduce using rule 3 (stmt_list -> stmt_list statement .)
    WHILE           reduce using rule 3 (stmt_list -> stmt_list statement .)
    DO              reduce using rule 3 (stmt_list -> stmt_list statement .)
    FOR             reduce using rule 3 (stmt_list -> stmt_list statement .)
    PRINT           reduce using rule 3 (stmt_list -> stmt_list statement .)
    SCAN            reduce using rule 3 (stmt_list -> stmt_list statement .)
    ID              reduce using rule 3 (stmt_list -> stmt_list statement .)
    +               reduce using rule 3 (stmt_list -> stmt_list statement .)
    -               reduce using rule 3 (stmt_list -> stmt_list statement .)
    ~               reduce using rule 3 (stmt_list -> stmt_list statement .)
    !               reduce using rule 3 (stmt_list -> stmt_list statement .)
    PLUSPLUS        reduce using rule 3 (stmt_list -> stmt_list statement .)
    MINUSMINUS      reduce using rule 3 (stmt_list -> stmt_list statement .)
    (               reduce using rule 3 (stmt_list -> stmt_list statement .)
    NUMBER          reduce using rule 3 (stmt_list -> stmt_list statement .)
    STRING          reduce using rule 3 (stmt_list -> stmt_list statement .)
    {               reduce using rule 3 (stmt_list -> stmt_list statement .)


state 7

    (5) statement -> expression . ;
    (30) expression -> expression . + expression
    (31) expression -> expression . - expression
    (32) expression -> expression . * expression
    (33) expression -> expression . / expression
    (34) expression -> expression . % expression
    (35) expression -> expression . < expression
    (36) expression -> expression . > expression
    (37) expression -> expression . LE expression
    (38) expression -> expression . GE expression
    (39) expression -> expression . EQ expression
    (40) expression -> expression . NE expression
    (41) expression -> expression . AND expression
    (42) expression -> expression . OR expression
    (47) expression -> expression . | expression
    (48) expression -> expression . ^ expression
    (49) expression -> expression . & expression

    ;               shift and go to state 25
    +               shift and go to state 26
    -               shift and go to state 27
    *               shift and go to state 28
    /               shift and go to state 29
    %               shift and go to state 30
    <               shift and go to state 31
    >               shift and go to state 32
    LE              shift and go to state 33
    GE              shift and go to state 34
    EQ              shift and go to state 35
    NE              shift and go to state 36
    AND             shift and go to state 37
    OR              shift and go to state 38
    |               shift and go to state 39
    ^               shift and go to state 40
    &               shift and go to state 41


state 8

    (6) statement -> compound_statement .

    }               reduce using rule 6 (statement -> compound_statement .)
    IF              reduce using rule 6 (statement -> compound_statement .)
    WHILE           reduce using rule 6 (statement -> compound_statement .)
    DO              reduce using rule 6 (statement -> compound_statement .)
    FOR             reduce using rule 6 (statement -> compound_statement .)
    PRINT           reduce using rule 6 (statement -> compound_statement .)
    SCAN            reduce using rule 6 (statement -> compound_statement .)
    ID              reduce using rule 6 (statement -> compound_statement .)
    +               reduce using rule 6 (statement -> compound_statement .)
    -               reduce using rule 6 (statement -> compound_statement .)
    ~               reduce using rule 6 (statement -> compound_statement .)
    !               reduce using rule 6 (statement -> compound_statement .)
    PLUSPLUS        reduce using rule 6 (statement -> compound_statement .)
    MINUSMINUS      reduce using rule 6 (statement -> compound_statement .)
    (               reduce using rule 6 (statement -> compound_statement .)
    NUMBER          reduce using rule 6 (statement -> compound_statement .)
    STRING          reduce using rule 6 (statement -> compound_statement .)
    {               reduce using rule 6 (statement -> compound_statement .)
    ELSE            reduce using rule 6 (statement -> compound_statement .)


state 9

    (7) statement -> IF . ( expression ) statement
    (8) statement -> IF . ( expression ) statement ELSE statement

    (               shift and go to state 42


state 10

    (52) expression -> ( . expression )
    (29) expression -> . ID assign_op expression
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression % expression
    (35) expression -> . expression < expression
    (36) expression -> . expression > expression
    (37) expression -> . expression LE expression
    (38) expression -> . expression GE expression
    (39) expression -> . expression EQ expression
    (40) expression -> . expression NE expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . + expression
    (44) expression -> . - expression
    (45) expression -> . ~ expression
    (46) expression -> . ! expression
    (47) expression -> . expression | expression
    (48) expression -> . expression ^ expression
    (49) expression -> . expression & expression
    (50) expression -> . PLUSPLUS ID
    (51) expression -> . MINUSMINUS ID
    (52) expression -> . ( expression )
    (53) expression -> . NUMBER
    (54) expression -> . STRING
    (55) expression -> . ID

    ID              shift and go to state 16
    +               shift and go to state 17
    -               shift and go to state 18
    ~               shift and go to state 19
    !               shift and go to state 20
    PLUSPLUS        shift and go to state 21
    MINUSMINUS      shift and go to state 22
    (               shift and go to state 10
    NUMBER          shift and go to state 23
    STRING          shift and go to state 24

    expression                     shift and go to state 43

state 11

    (9) statement -> WHILE . ( expression ) statement

    (               shift and go to state 44


state 12

    (10) statement -> DO . statement WHILE ( expression ) ;
    (5) statement -> . expression ;
    (6) statement -> . compound_statement
    (7) statement -> . IF ( expression ) statement
    (8) statement -> . IF ( expression ) statement ELSE statement
    (9) statement -> . WHILE ( expression ) statement
    (10) statement -> . DO statement WHILE ( expression ) ;
    (11) statement -> . FOR ( opt_expr ; opt_expr ; opt_expr ) statement
    (14) statement -> . PRINT ( print_args ) ;
    (17) statement -> . SCAN ( ID ) ;
    (29) expression -> . ID assign_op expression
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression % expression
    (35) expression -> . expression < expression
    (36) expression -> . expression > expression
    (37) expression -> . expression LE expression
    (38) expression -> . expression GE expression
    (39) expression -> . expression EQ expression
    (40) expression -> . expression NE expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . + expression
    (44) expression -> . - expression
    (45) expression -> . ~ expression
    (46) expression -> . ! expression
    (47) expression -> . expression | expression
    (48) expression -> . expression ^ expression
    (49) expression -> . expression & expression
    (50) expression -> . PLUSPLUS ID
    (51) expression -> . MINUSMINUS ID
    (52) expression -> . ( expression )
    (53) expression -> . NUMBER
    (54) expression -> . STRING
    (55) expression -> . ID
    (2) compound_statement -> . { stmt_list }

    IF              shift and go to state 9
    WHILE           shift and go to state 11
    DO              shift and go to state 12
    FOR             shift and go to state 13
    PRINT           shift and go to state 14
    SCAN            shift and go to state 15
    ID              shift and go to state 16
    +               shift and go to state 17
    -               shift and go to state 18
    ~               shift and go to state 19
    !               shift and go to state 20
    PLUSPLUS        shift and go to state 21
    MINUSMINUS      shift and go to state 22
    (               shift and go to state 10
    NUMBER          shift and go to state 23
    STRING          shift and go to state 24
    {               shift and go to state 3

    statement                      shift and go to state 45
    expression                     shift and go to state 7
    compound_statement             shift and go to state 8

state 13

    (11) statement -> FOR . ( opt_expr ; opt_expr ; opt_expr ) statement

    (               shift and go to state 46


state 14

    (14) statement -> PRINT . ( print_args ) ;

    (               shift and go to state 47


state 15

    (17) statement -> SCAN . ( ID ) ;

    (               shift and go to state 48


state 16

    (29) expression -> ID . assign_op expression
    (55) expression -> ID .
    (18) assign_op -> . =
    (19) assign_op -> . PLUSEQ
    (20) assign_op -> . MINUSEQ
    (21) assign_op -> . TIMESEQ
    (22) assign_op -> . DIVEQ
    (23) assign_op -> . MODEQ
    (24) assign_op -> . LSHIFTEQ
    (25) assign_op -> . RSHIFTEQ
    (26) assign_op -> . ANDEQ
    (27) assign_op -> . XOREQ
    (28) assign_op -> . OREQ

    ;               reduce using rule 55 (expression -> ID .)
    +               reduce using rule 55 (expression -> ID .)
    -               reduce using rule 55 (expression -> ID .)
    *               reduce using rule 55 (expression -> ID .)
    /               reduce using rule 55 (expression -> ID .)
    %               reduce using rule 55 (expression -> ID .)
    <               reduce using rule 55 (expression -> ID .)
    >               reduce using rule 55 (expression -> ID .)
    LE              reduce using rule 55 (expression -> ID .)
    GE              reduce using rule 55 (expression -> ID .)
    EQ              reduce using rule 55 (expression -> ID .)
    NE              reduce using rule 55 (expression -> ID .)
    AND             reduce using rule 55 (expression -> ID .)
    OR              reduce using rule 55 (expression -> ID .)
    |               reduce using rule 55 (expression -> ID .)
    ^               reduce using rule 55 (expression -> ID .)
    &               reduce using rule 55 (expression -> ID .)
    )               reduce using rule 55 (expression -> ID .)
    =               shift and go to state 50
    PLUSEQ          shift and go to state 51
    MINUSEQ         shift and go to state 52
    TIMESEQ         shift and go to state 53
    DIVEQ           shift and go to state 54
    MODEQ           shift and go to state 55
    LSHIFTEQ        shift and go to state 56
    RSHIFTEQ        shift and go to state 57
    ANDEQ           shift and go to state 58
    XOREQ           shift and go to state 59
    OREQ            shift and go to state 60

    assign_op                      shift and go to state 49

state 17

    (43) expression -> + . expression
    (29) expression -> . ID assign_op expression
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression % expression
    (35) expression -> . expression < expression
    (36) expression -> . expression > expression
    (37) expression -> . expression LE expression
    (38) expression -> . expression GE expression
    (39) expression -> . expression EQ expression
    (40) expression -> . expression NE expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . + expression
    (44) expression -> . - expression
    (45) expression -> . ~ expression
    (46) expression -> . ! expression
    (47) expression -> . expression | expression
    (48) expression -> . expression ^ expression
    (49) expression -> . expression & expression
    (50) expression -> . PLUSPLUS ID
    (51) expression -> . MINUSMINUS ID
    (52) expression -> . ( expression )
    (53) expression -> . NUMBER
    (54) expression -> . STRING
    (55) expression -> . ID

    ID              shift and go to state 16
    +               shift and go to state 17
    -               shift and go to state 18
    ~               shift and go to state 19
    !               shift and go to state 20
    PLUSPLUS        shift and go to state 21
    MINUSMINUS      shift and go to state 22
    (               shift and go to state 10
    NUMBER          shift and go to state 23
    STRING          shift and go to state 24

    expression                     shift and go to state 61

state 18

    (44) expression -> - . expression
    (29) expression -> . ID assign_op expression
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression % expression
    (35) expression -> . expression < expression
    (36) expression -> . expression > expression
    (37) expression -> . expression LE expression
    (38) expression -> . expression GE expression
    (39) expression -> . expression EQ expression
    (40) expression -> . expression NE expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . + expression
    (44) expression -> . - expression
    (45) expression -> . ~ expression
    (46) expression -> . ! expression
    (47) expression -> . expression | expression
    (48) expression -> . expression ^ expression
    (49) expression -> . expression & expression
    (50) expression -> . PLUSPLUS ID
    (51) expression -> . MINUSMINUS ID
    (52) expression -> . ( expression )
    (53) expression -> . NUMBER
    (54) expression -> . STRING
    (55) expression -> . ID

    ID              shift and go to state 16
    +               shift and go to state 17
    -               shift and go to state 18
    ~               shift and go to state 19
    !               shift and go to state 20
    PLUSPLUS        shift and go to state 21
    MINUSMINUS      shift and go to state 22
    (               shift and go to state 10
    NUMBER          shift and go to state 23
    STRING          shift and go to state 24

    expression                     shift and go to state 62

state 19

    (45) expression -> ~ . expression
    (29) expression -> . ID assign_op expression
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression % expression
    (35) expression -> . expression < expression
    (36) expression -> . expression > expression
    (37) expression -> . expression LE expression
    (38) expression -> . expression GE expression
    (39) expression -> . expression EQ expression
    (40) expression -> . expression NE expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . + expression
    (44) expression -> . - expression
    (45) expression -> . ~ expression
    (46) expression -> . ! expression
    (47) expression -> . expression | expression
    (48) expression -> . expression ^ expression
    (49) expression -> . expression & expression
    (50) expression -> . PLUSPLUS ID
    (51) expression -> . MINUSMINUS ID
    (52) expression -> . ( expression )
    (53) expression -> . NUMBER
    (54) expression -> . STRING
    (55) expression -> . ID

    ID              shift and go to state 16
    +               shift and go to state 17
    -               shift and go to state 18
    ~               shift and go to state 19
    !               shift and go to state 20
    PLUSPLUS        shift and go to state 21
    MINUSMINUS      shift and go to state 22
    (               shift and go to state 10
    NUMBER          shift and go to state 23
    STRING          shift and go to state 24

    expression                     shift and go to state 63

state 20

    (46) expression -> ! . expression
    (29) expression -> . ID assign_op expression
    (30) expression -> . expression + expression
    (31) expression -> . expression - expression
    (32) expression -> . expression * expression
    (33) expression -> . expression / expression
    (34) expression -> . expression % expression
    (35) expression -> . expression < expression
    (36) expression -> . expression > expression
    (37) expression -> . expression LE expression
    (38) expression -> . expression GE expression
    (39) expression -> . expression EQ expression
    (40) expression -> . expression NE expression
    (41) expression -> . expression AND expression
    (42) expression -> . expression OR expression
    (43) expression -> . + expression
    (44) expression -> . - expression
    (45) expression -> . ~ expression
    (46) expression -> . ! expression
    (47) expression -> . expression | expression
    (48) expression -> . expression ^ expression
    (49) expression -> . expression & expression
    (50) expression -> . PLUSPLUS ID
    (51) expression -> . MINUSMINUS ID
    (52) expression -> . ( expression )
    (53) expression -> . NUMBER
    (54) expression -> . STRING
    (55) expression -> . ID

    ID              shift and go to state 16
    +               shift and go to state 17
    -               shift and go to state 18
    ~               shift and go to state 19
    !               shift and go to state 20
    PLUSPLUS        shift and go to state 21
    MINUSMINUS      shift and go to state 22
    (               shift and go to state 10
    NUMBER          shift and go to state 23
    STRING          shift and go to state 24

    expression                     shift and go to state 64

state 21

    (50) expression -> PLUSPLUS . ID

    ID              shift and go to state 65


state 22

    (51) expression -> MINUSMINUS . ID

    ID              shift and go to state 66


state 23

    (53) expression -> NUMBER .

    ;               reduce using rule 53 (expression -> NUMBER .)
    +               reduce using rule 53 (expression -> NUMBER .)
    -               reduce using rule 53 (expression -> NUMBER .)
    *               reduce using rule 53 (expression -> NUMBER .)
    /               reduce using rule 53 (expression -> NUMBER .)
    %               reduce using rule 53 (expression -> NUMBER .)
    <               reduce using rule 53 (expression -> NUMBER .)
    >               reduce using rule 53 (expression -> NUMBER .)
    LE              reduce using rule 53 (expression -> NUMBER .)
    GE              reduce using rule 53 (expression -> NUMBER .)
    EQ              reduce using rule 53 (expression -> NUMBER .)
    NE              reduce using rule 53 (expression -> NUMBER .)
    AND             reduce using rule 53 (expression -> NUMBER .)
    OR              reduce using rule 53 (expression -> NUMBER .)
    |               reduce using rule 53 (expression -> NUMBER .)
    ^               reduce using rule 53 (expression -> NUMBER .)
    &               reduce using rule 53 (expression -> NUMBER .)
    )               reduce using rule 53 (expression -> NUMBER .)


state 24

    (54) expression -> STRING .
